# gpu-context-demo

./: .gitignore  .prototype_regime_tells.py.swp  CONTEXT.md  LICENSE  README.md  gpu_demo.py  gpu_kernel_regimes.py  mps_helper.py  profile_decompress.py  prototype_regime_tells.py  prototype_regime_tells_NOTES.md  pyproject.toml  regime_cache.json  regimes.py  sweep_cache.json  worker.py
docs/: demo2_regime_tells.html  handoff-phase1-cleanup.md  handoff-phase2-kernel-regimes.md
docs/adr/: 0001-nvshmem-out-of-scope.md  0002-phase2-kernel-regimes-scope.md
